<resources>
    <string name="app_name">TimeSync EduAlert V2</string>
    <string name="description_icon">App Icon</string>
    <string name="hint_add_course_button">Add Course</string>
    <string name="hint_settings_button">Settings</string>
    <string name="placeholder">Placeholder</string>
    <string name="hint_select_weekdays">Select Weekday(s)</string>
    <string name="hint_monday">Mon.</string>
    <string name="hint_tuesday">Tue.</string>
    <string name="hint_wednesday">Wed.</string>
    <string name="hint_thursday">Thu.</string>
    <string name="hint_friday">Fri.</string>
    <string name="hint_select_time">Select Time</string>
    <string name="hint_start_time">Start Time</string>
    <string name="hint_select">Select</string>
    <string name="hint_end_time">End Time</string>
    <string name="hint_course_name">Course Name</string>
    <string name="hint_enter_course_name">Enter Course Name</string>
    <string name="hint_location">Location</string>
    <string name="hint_enter_location">Enter Location</string>
    <string name="hint_description">Description</string>
    <string name="hint_enter_description">Enter Description</string>
    <string name="hint_color">Select Color</string>
    <string name="hint_select_color">Select Color</string>
    <string name="hint_back">Back</string>
    <string name="hint_submit">Submit</string>
    <string name="course_time_format">%1$s - %2$s</string>
    <string name="hint_delete">Delete</string>
    <string name="hint_edit">Edit</string>
    <string name="hint_clear_all_schedules">Clear All Schedules</string>
    <string name="hint_enable_notifications">Enable Notifications</string>
    <string name="hint_export_schedule">Export Schedule</string>
    <string name="hint_import_schedule">Import Schedule</string>
    <string name="hint_remind_me_before">Remind Me Before:</string>
    <string name="hint_minute_s">minute(s)</string>
    <string name="reminder_time_text">%1$d minutes</string>
    <string name="hint_update">update</string>
</resources>