<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_select_weekdays" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_monday" />

            <CheckBox
                android:id="@+id/checkbox_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_tuesday" />

            <CheckBox
                android:id="@+id/checkbox_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_wednesday" />

            <CheckBox
                android:id="@+id/checkbox_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_thursday" />

            <CheckBox
                android:id="@+id/checkbox_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_friday" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_select_time" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/hint_start_time" />

            <Button
                android:id="@+id/button_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_select" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginStart="16dp"
                android:text="@string/hint_end_time" />

            <Button
                android:id="@+id/button_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/hint_select" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_course_name" />

        <EditText
            android:id="@+id/edittext_course_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_enter_course_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_location" />

        <EditText
            android:id="@+id/edittext_course_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_enter_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_description" />

        <EditText
            android:id="@+id/edittext_course_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_enter_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_color" />

        <Button
            android:id="@+id/button_select_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_select_color" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/hint_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/hint_submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
